# MewAI

./: .gitignore  README.md  api_backend.md  propuesta_arquitectura.md  propuesta_funcional.md  requirements.txt  resumen_mejoras.md
backend/: pyproject.toml  requirements.txt  run.py  streamlit_app.py
backend/app/: main.py
backend/app/api/: generation.py
backend/app/services/: mewai_service.py
backend/src/: crew.py  main.py
backend/src/config/: agents.yaml  tasks.yaml
backend/src/tools/: FluxImageGeneratorTool.py
backend/tests/: image_generation.ipynb
docs/: frontend_componentes.md
frontend/: package-lock.json  package.json  taildwind.config.js  taildwindcss.config.js  tailwind.config.js
frontend-astro/: package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend-astro/src/components/: ContentGenerator.astro
frontend-astro/src/components/layout/: Header.astro  Sidebar.astro
frontend-astro/src/layouts/: BaseLayout.astro  Layout.astro
frontend-astro/src/styles/: global.css
frontend/src/: App.tsx  index.tsx
frontend/src/api/: api.ts  generation.ts
frontend/src/components/: Button.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useGeneration.ts
frontend/src/pages/: Dashboard.tsx  GenerationProgress.tsx  NewProject.tsx  ProjectResult.tsx
frontend/src/styles/: global.css
src/: crew.py
src/config/: agents.yaml  tasks.yaml
src/output/: blog_draft.md  blog_reviewed.md  formatted_post.json
src/tools/: FluxImageGeneratorTool.py  rag_tool.py  scraper_tool.py
